--- a/cubemx/g040_j6.ioc
+++ b/cubemx/g040_j6.ioc
@@ -5,50 +5,62 @@ CAD.provider=
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
-Mcu.CPN=STM32G030F6P6
+Mcu.CPN=STM32G030J6M6
 Mcu.Family=STM32G0
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM14
-Mcu.IP4=USART1
-Mcu.IPNb=5
-Mcu.Name=STM32G030F6Px
-Mcu.Package=TSSOP20
-Mcu.Pin0=PB7
-Mcu.Pin1=PA7
-Mcu.Pin2=PA13
-Mcu.Pin3=PA14-BOOT0
-Mcu.Pin4=PB6
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_TIM14_VS_ClockSourceINT
-Mcu.PinsNb=7
+Mcu.IPNb=4
+Mcu.Name=STM32G030J6Mx
+Mcu.Package=SO8N
+Mcu.Pin0=PC14-OSC32_IN (PC14)
+Mcu.Pin1=PB7
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14-BOOT0
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin2=PB8
+Mcu.Pin3=PB9
+Mcu.Pin4=NRST
+Mcu.Pin5=PA0
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PB1
+Mcu.Pin9=PA12 [PA10]
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
-Mcu.UserName=STM32G030F6Px
-MxCube.Version=6.11.0
-MxDb.Version=DB.6.0.110
+Mcu.UserName=STM32G030J6Mx
+MxCube.Version=6.12.1
+MxDb.Version=DB.6.0.121
+NRST.Locked=true
+NRST__PA0__PA1__PA2.StandardMode=true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+PA0.Locked=true
+PA1.Locked=true
+PA12\ [PA10].Locked=true
+PA12\ [PA10].Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14-BOOT0.Mode=Serial_Wire
 PA14-BOOT0.Signal=SYS_SWCLK
-PA14-BOOT0__PA15.StandardMode=true
-PA7.Locked=true
-PA7.Signal=S_TIM14_CH1
-PB0__PB1__PB2__PA8.StandardMode=true
-PB3__PB4__PB5__PB6.StandardMode=true
-PB6.Mode=Asynchronous
-PB6.Signal=USART1_TX
-PB7.Mode=Asynchronous
+PA14-BOOT0__PA15__PB5__PB6.StandardMode=true
+PA2.Locked=true
+PA2.Signal=USART2_TX
+PB0__PB1__PA8__PA11\ [PA9].StandardMode=true
+PB1.Signal=S_TIM14_CH1
+PB7.Locked=true
 PB7.Signal=USART1_RX
-PB7__PB8.StandardMode=true
-PC14-OSC32_IN\ (PC14)__PB9.StandardMode=true
+PB8.Locked=true
+PB9.Locked=true
+PC14-OSC32_IN\ (PC14).Locked=true
+PC14-OSC32_IN\ (PC14)__PB7__PB8__PB9.StandardMode=true
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -58,7 +70,7 @@ ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32G030F6Px
+ProjectManager.DeviceId=STM32G030J6Mx
 ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.6.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
@@ -70,17 +82,17 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=cubemx.ioc
-ProjectManager.ProjectName=cubemx
+ProjectManager.ProjectFileName=g040_j6.ioc
+ProjectManager.ProjectName=g040_j6
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=EWARM V8.50
+ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
@@ -111,8 +123,6 @@ SH.S_TIM14_CH1.0=TIM14_CH1,Input_Capture1_from_TI1
 SH.S_TIM14_CH1.ConfNb=1
 TIM14.Channel=TIM_CHANNEL_1
 TIM14.IPParameters=Channel
-USART1.IPParameters=VirtualMode-Asynchronous
-USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
